--- a/scss/components/_products.scss
+++ b/scss/components/_products.scss
@@ -58,7 +58,7 @@
     object-fit: contain;
   }
 
-  h3 { font-size: 18px; margin: 5px 0 0; }
+  h3 { margin: 5px 0 0; }
   p  { margin: 1px 0; font-size: 14px; }
 
   .in-stock   { color: green; font-weight: bold; margin: 0; font-size: 12px; }
@@ -180,7 +180,7 @@
       }
 
       /* mittenkolumn) */
-      h3 { grid-column: 3; grid-row: 1; font-size: 20px; margin-bottom: -20px; }
+      h3 { grid-column: 3; grid-row: 1; margin-bottom: -20px; }
       > p:nth-of-type(1) { /* Mått */     grid-column: 3; grid-row: 2; font-size: 15px; }
       > p:nth-of-type(2) { /* Artikelnr */ grid-column: 3; grid-row: 3; font-size: 15px; margin-top: -10px; margin-bottom: 10px; }
 
