feat: add Checkout page with dedicated header and styling
- Create CheckoutPage.cshtml for checkout flow
- Add minimal header with separate SCSS partial in Layout/
- Apply layout styling only on checkout and order confirmation pages

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -9,6 +9,7 @@
 @use 'layout/header';
 @use 'layout/navigation';
 @use 'layout/footer';
+@use 'layout/checkout-header';
 
 /* Components */
 @use 'components/overlay';
@@ -25,6 +26,7 @@
 
 /* Pages */
 @use 'pages/categories';
+@use 'pages/checkout';
 @use 'pages/checkout-cart';
 @use 'pages/checkout-order';
 @use 'pages/checkout-upsell';
