feat: add Confirmation.cshtml landing page after order placement
Includes order number, order details, and contact options.
Styled using SCSS partials.

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -30,3 +30,6 @@
 @use 'pages/checkout-cart';
 @use 'pages/checkout-order';
 @use 'pages/checkout-upsell';
+@use 'pages/confirmation';
+@use 'pages/confirmation-steps';
+@use 'pages/confirmation-contact';
